--- a/css/style.css
+++ b/css/style.css
@@ -747,7 +747,7 @@ td {
   width: 20vw;
   cursor: pointer; }
 
-.ss-corp__container {
+.sea-serpent__container {
   grid-column: col-end 4 / col-end 7;
   display: grid;
   grid-template-rows: 65% 35%; }
@@ -763,74 +763,3 @@ td {
   @media only screen and (max-width: 62.5em) {
     .sea-serpent__content {
       grid-column: full-start / full-end; } }
-
-.cube {
-  /* dimensions below are for overall cube shape - each polygon side going to fit within this */
-  /* item being each individual side of the cube */ }
-  .cube__header {
-    position: absolute;
-    left: 70%;
-    top: 20%;
-    transform: translate(-50%, -50%);
-    text-transform: uppercase; }
-  .cube__container {
-    /* this section to go from column 8 to the right side of the viewport horzionatally */
-    background-color: white;
-    grid-row: 2 / 3;
-    /* overflow is clipped at height of the container - rest is hidden */
-    overflow: hidden;
-    display: grid;
-    /* need to use grid to centre cubes vertically */
-    align-items: end;
-    /* need to use grid to move cubes to the left horizontally */
-    justify-content: start;
-    position: relative; }
-  .cube__row {
-    /* display inline-flex - makes the flex container display inline */
-    /* inline meaning - element display inline - inside the current block on the same line */
-    /* this will make the container display in a row */
-    display: inline-flex;
-    opacity: 0.9; }
-  .cube__shape {
-    position: relative;
-    width: 4.5rem;
-    height: 4.5rem; }
-  .cube__item {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    transition: 2s; }
-    .cube__item--1 {
-      /* top of the cube */
-      clip-path: polygon(50% 0%, 100% 25%, 50% 50%, 0 25%); }
-      .cube__item--1:hover {
-        background-color: #0a19a1;
-        transition: 0s; }
-    .cube__item--2 {
-      /* left side of cube */
-      clip-path: polygon(0 75%, 50% 100%, 50% 50%, 0 25%); }
-      .cube__item--2::before {
-        /* setting styles for before element to change the background-color to distinguish from rest of code */
-        content: '';
-        position: absolute;
-        top: 0%;
-        left: 0%;
-        width: 100%;
-        height: 100%;
-        background-color: #f9f7f6; }
-    .cube__item--3 {
-      /* right side of cube */
-      clip-path: polygon(100% 75%, 50% 100%, 50% 50%, 100% 25%); }
-      .cube__item--3::before {
-        /* setting styles for before element to change the background-color to distinguish from rest of code */
-        content: '';
-        position: absolute;
-        top: 0%;
-        left: 0%;
-        width: 100%;
-        height: 100%;
-        background-color: #aaa; }
