--- a/css/style.css
+++ b/css/style.css
@@ -750,7 +750,7 @@ td {
 .sea-serpent__container {
   grid-column: col-end 4 / col-end 7;
   display: grid;
-  grid-template-rows: 65% 35%; }
+  grid-template-rows: 40rem calc(100vh - 40rem); }
 
 .sea-serpent__content {
   grid-row: 1 /2;
