--- a/sass/_sea-serpent.scss
+++ b/sass/_sea-serpent.scss
@@ -2,7 +2,7 @@
   &__container {
     grid-column: col-end 4 / col-end 7;
     display: grid;
-    grid-template-rows: 65% 35%;
+    grid-template-rows: 40rem calc(100vh - 40rem);
   }
   &__content {
     grid-row: 1 /2;
