--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -750,15 +750,36 @@ td {
 .sea-serpent__container {
   grid-column: col-end 4 / col-end 7;
   display: grid;
-  grid-template-rows: 65% 35%; }
-  .sea-serpent__container__content {
-    grid-row: 1 /2;
-    background-image: linear-gradient(rgba(12, 34, 232, 0.2), rgba(10, 25, 161, 0.5)), url(../img/sea-serpent.png);
-    background-repeat: no-repeat;
-    /* first value = horizontal position. second = vertical. Top left corner = 0% 0%, 
+  grid-template-rows: 40rem calc(100vh - 40rem); }
+
+.sea-serpent__content {
+  grid-row: 1 /2;
+  background-image: linear-gradient(rgba(12, 34, 232, 0.2), rgba(10, 25, 161, 0.5)), url(../img/sea-serpent.png);
+  background-repeat: no-repeat;
+  /* first value = horizontal position. second = vertical. Top left corner = 0% 0%, 
     right corner = 100% 100% */
-    background-position: 50% 60%;
-    background-size: cover; }
-    @media only screen and (max-width: 62.5em) {
-      .sea-serpent__container__content {
-        grid-column: full-start / full-end; } }
+  background-position: 50% 60%;
+  background-size: cover;
+  display: flex;
+  flex-flow: wrap;
+  align-items: center;
+  justify-content: center; }
+  @media only screen and (max-width: 62.5em) {
+    .sea-serpent__content {
+      grid-column: full-start / full-end; } }
+
+.sea-serpent__ripple {
+  width: 50rem;
+  height: 50rem;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .sea-serpent__ripple--effect {
+    position: absolute;
+    z-index: 2;
+    transform: rotateX(80deg);
+    box-sizing: border-box;
+    border: 4px solid #fff;
+    border-radius: 50%;
+    animation: animate 5s linear infinite;
+    animation-delay: calc(-0.5s * var(--i)); }
