--- a/css/style.css
+++ b/css/style.css
@@ -676,19 +676,10 @@ left position as 0. This is for 0 to 5% of the animation */
 .table-sale__container {
   grid-column: col-end 7 / full-end;
   display: grid;
-  grid-template-rows: 10rem 30rem calc(100vh - 40rem); }
-
-.table__title {
-  background-color: #0a19a1;
-  display: flex;
-  /* align title horizontally */
-  justify-content: center;
-  /* align title vertically */
-  align-items: center;
-  grid-row: 1 / 2; }
+  grid-template-rows: 40rem calc(100vh - 40rem); }
 
 .table__container {
-  grid-row: 2 /3;
+  grid-row: 1 /2;
   display: grid;
   /* align content vertically at start */
   align-content: center;
@@ -736,7 +727,7 @@ td {
   padding: 1.2rem; }
 
 .shirt-sale__container {
-  grid-row: 3 /4;
+  grid-row: 2 /3;
   display: grid;
   /* align title horizontally */
   justify-content: center;
@@ -763,3 +754,62 @@ td {
   @media only screen and (max-width: 62.5em) {
     .sea-serpent__content {
       grid-column: full-start / full-end; } }
+
+.sea-serpent__ripple {
+  width: 50rem;
+  height: 50rem;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  .sea-serpent__ripple--effect {
+    position: absolute;
+    z-index: 5;
+    transform: rotateX(80deg);
+    box-sizing: border-box;
+    border: 4px solid blue;
+    border-radius: 50%;
+    animation: animate 5s linear infinite;
+    animation-delay: calc(-0.5s * var(--i)); }
+    .sea-serpent__ripple--effect--effect:nth-child(2) {
+      animation: animate2 5s linear infinite;
+      translate: -800px 0;
+      border: 8px solid #6699cc;
+      animation-delay: calc(-0.5s * var(--i)); }
+    .sea-serpent__ripple--effect--effect:nth-child(3) {
+      animation: animate3 5s linear infinite;
+      border: 10px solid #00577b;
+      translate: -400px -800px;
+      animation-delay: calc(-0.5s * var(--i)); }
+
+@keyframes animate {
+  0% {
+    width: 20rem;
+    height: 20rem; }
+  50% {
+    opacity: 1; }
+  100% {
+    width: 50rem;
+    height: 50rem;
+    opacity: 0; } }
+
+@keyframes animate2 {
+  0% {
+    width: 20rem;
+    height: 20rem; }
+  50% {
+    opacity: 1; }
+  100% {
+    width: 50rem;
+    height: 50rem;
+    opacity: 0; } }
+
+@keyframes animate3 {
+  0% {
+    width: 20rem;
+    height: 20rem; }
+  50% {
+    opacity: 1; }
+  100% {
+    width: 40rem;
+    height: 40rem;
+    opacity: 0; } }
