--- a/sass/_sea-serpent.scss
+++ b/sass/_sea-serpent.scss
@@ -20,4 +20,76 @@
       grid-column: full-start / full-end;
     }
   }
+  &__ripple {
+    width: 50rem;
+    height: 50rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    &--effect {
+      position: absolute;
+      z-index: 5;
+      transform: rotateX(80deg);
+      box-sizing: border-box;
+      border: 4px solid blue;
+      border-radius: 50%;
+      animation: animate 5s linear infinite;
+      animation-delay: calc(-0.5s * var(--i));
+      &--effect:nth-child(2) {
+        animation: animate2 5s linear infinite;
+        translate: -800px 0;
+        border: 8px solid #6699cc;
+        animation-delay: calc(-0.5s * var(--i));
+      }
+      &--effect:nth-child(3) {
+        animation: animate3 5s linear infinite;
+        border: 10px solid #00577b;
+        translate: -400px -800px;
+        animation-delay: calc(-0.5s * var(--i));
+      }
+    }
+  }
+}
+@keyframes animate {
+  0% {
+    width: 20rem;
+    height: 20rem;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    width: 50rem;
+    height: 50rem;
+    opacity: 0;
+  }
+}
+
+@keyframes animate2 {
+  0% {
+    width: 20rem;
+    height: 20rem;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    width: 50rem;
+    height: 50rem;
+    opacity: 0;
+  }
+}
+@keyframes animate3 {
+  0% {
+    width: 20rem;
+    height: 20rem;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    width: 40rem;
+    height: 40rem;
+    opacity: 0;
+  }
 }
