--- a/css/style.css
+++ b/css/style.css
@@ -764,7 +764,6 @@ td {
 
 .sea-serpent__ripple span {
   position: absolute;
-  z-index: 5;
   transform: rotateX(80deg);
   box-sizing: border-box;
   border: 4px solid blue;
@@ -774,7 +773,7 @@ td {
 
 .sea-serpent__ripple:nth-child(2) span {
   animation: animate2 5s linear infinite;
-  translate: -800px 0;
+  translate: 0rem 0rem;
   border: 8px solid #6699cc;
   animation-delay: calc(-0.5s * var(--i)); }
 
@@ -786,8 +785,8 @@ td {
 
 @keyframes animate {
   0% {
-    width: 20rem;
-    height: 20rem; }
+    width: 13rem;
+    height: 13rem; }
   50% {
     opacity: 1; }
   100% {
@@ -797,8 +796,8 @@ td {
 
 @keyframes animate2 {
   0% {
-    width: 20rem;
-    height: 20rem; }
+    width: 13rem;
+    height: 13rem; }
   50% {
     opacity: 1; }
   100% {
@@ -808,8 +807,8 @@ td {
 
 @keyframes animate3 {
   0% {
-    width: 20rem;
-    height: 20rem; }
+    width: 13rem;
+    height: 13rem; }
   50% {
     opacity: 1; }
   100% {
