--- a/css/style.css
+++ b/css/style.css
@@ -766,52 +766,53 @@ td {
   position: absolute;
   transform: rotateX(80deg);
   box-sizing: border-box;
-  border: 4px solid blue;
+  border: 0.7rem solid #0a19a1;
   border-radius: 50%;
-  animation: animate 5s linear infinite;
+  translate: -8rem 11rem;
+  animation: ripple 5s linear infinite;
   animation-delay: calc(-0.5s * var(--i)); }
 
 .sea-serpent__ripple:nth-child(2) span {
-  animation: animate2 5s linear infinite;
-  translate: 0rem 0rem;
-  border: 8px solid #6699cc;
+  animation: ripple2 5s linear infinite;
+  translate: -8rem -39rem;
+  border: 0.2rem solid #00577b;
   animation-delay: calc(-0.5s * var(--i)); }
 
 .sea-serpent__ripple:nth-child(3) span {
-  animation: animate3 5s linear infinite;
-  border: 10px solid #00577b;
-  translate: -400px -800px;
+  animation: ripple3 5s linear infinite;
+  border: 0.2rem solid #6699cc;
+  translate: -8rem -89rem;
   animation-delay: calc(-0.5s * var(--i)); }
 
-@keyframes animate {
+@keyframes ripple {
   0% {
     width: 13rem;
     height: 13rem; }
   50% {
     opacity: 1; }
   100% {
-    width: 50rem;
-    height: 50rem;
+    width: 35rem;
+    height: 35rem;
     opacity: 0; } }
 
-@keyframes animate2 {
+@keyframes ripple2 {
   0% {
     width: 13rem;
     height: 13rem; }
   50% {
     opacity: 1; }
   100% {
-    width: 50rem;
-    height: 50rem;
+    width: 30rem;
+    height: 30rem;
     opacity: 0; } }
 
-@keyframes animate3 {
+@keyframes ripple3 {
   0% {
     width: 13rem;
     height: 13rem; }
   50% {
     opacity: 1; }
   100% {
-    width: 40rem;
-    height: 40rem;
+    width: 30rem;
+    height: 30rem;
     opacity: 0; } }
