--- a/sass/_sea-serpent.scss
+++ b/sass/_sea-serpent.scss
@@ -8,7 +8,7 @@
     grid-row: 1 /2;
     background-image: linear-gradient(
         rgba($color-primary-dark, 0.5),
-        rgba($color-primary, 0.2)
+        rgba($color-primary, 0.1)
       ),
       url(../img/sea-serpent.png);
     background-repeat: no-repeat;
@@ -31,7 +31,10 @@
     position: absolute;
     transform: rotateX(80deg);
     box-sizing: border-box;
-    border: 0.5rem solid $color-primary-dark;
+    /* border styles for the ripples */
+    border-bottom: 0.3rem solid #00577b;
+    border-left: 0.3rem solid #00577b;
+    border-right: 0.3rem solid #00577b;
     border-radius: 50%;
     translate: -8rem 11rem;
     animation: ripple 5s linear infinite;
@@ -40,20 +43,26 @@
   &__ripple:nth-child(2) span {
     animation: ripple2 5s linear infinite;
     translate: -8rem -39rem;
-    border: 0.2rem solid $color-primary;
+    /* border styles for the ripples */
+    border-bottom: 0.5rem solid #043950;
+    border-left: 0.5rem solid #043950;
+    border-right: 0.5rem solid #043950;
+
     animation-delay: calc(-0.5s * var(--i));
   }
   &__ripple:nth-child(3) span {
     animation: ripple3 5s linear infinite;
-    border: 0.2rem solid #00577b;
+    border-bottom: 0.3rem solid $color-primary-dark;
+    border-left: 0.3rem solid $color-primary-dark;
+    border-right: 0.3rem solid $color-primary-dark;
     translate: -8rem -89rem;
     animation-delay: calc(-0.5s * var(--i));
   }
 }
 @keyframes ripple {
   0% {
-    width: 13rem;
-    height: 13rem;
+    width: 12rem;
+    height: 12rem;
   }
   50% {
     opacity: 1;
@@ -74,8 +83,8 @@
     opacity: 1;
   }
   100% {
-    width: 30rem;
-    height: 30rem;
+    width: 25rem;
+    height: 25rem;
     opacity: 0;
   }
 }
