--- a/css/style.css
+++ b/css/style.css
@@ -684,7 +684,7 @@ left position as 0. This is for 0 to 5% of the animation */
   /* align content vertically at start */
   align-content: center;
   justify-content: center;
-  background-color: #f9f7f6; }
+  background-color: #101d2c; }
 
 .table__content {
   /* collapse all table borders into single border */
@@ -693,7 +693,7 @@ left position as 0. This is for 0 to 5% of the animation */
   /* table rows still have square borders - overflow hidden ensures border radius set on table will 
     display nicely */
   overflow: hidden;
-  box-shadow: 0 1rem 4rem #101d2c; }
+  box-shadow: 0 1rem 4rem #f9f7f6; }
 
 .table__header {
   background-color: #101d2c;
@@ -750,7 +750,8 @@ td {
   /* first value = horizontal position. second = vertical. Top left corner = 0% 0%, 
     right corner = 100% 100% */
   background-position: 50% 60%;
-  background-size: cover; }
+  background-size: cover;
+  filter: blur(0.05rem); }
   @media only screen and (max-width: 62.5em) {
     .sea-serpent__content {
       grid-column: full-start / full-end; } }
@@ -799,8 +800,8 @@ td {
   50% {
     opacity: 1; }
   100% {
-    width: 35rem;
-    height: 35rem;
+    width: 20rem;
+    height: 20rem;
     opacity: 0; } }
 
 @keyframes ripple2 {
