--- a/sass/_sea-serpent.scss
+++ b/sass/_sea-serpent.scss
@@ -16,6 +16,7 @@
     right corner = 100% 100% */
     background-position: 50% 60%;
     background-size: cover;
+    filter: blur(0.05rem);
     @media only screen and (max-width: $bp-large) {
       grid-column: full-start / full-end;
     }
@@ -68,8 +69,8 @@
     opacity: 1;
   }
   100% {
-    width: 35rem;
-    height: 35rem;
+    width: 20rem;
+    height: 20rem;
     opacity: 0;
   }
 }
