--- a/css/style.css
+++ b/css/style.css
@@ -684,7 +684,14 @@ left position as 0. This is for 0 to 5% of the animation */
   /* align content vertically at start */
   align-content: center;
   justify-content: center;
-  background-color: #101d2c; }
+  background-color: #35b3e7;
+  box-shadow: inset 0 0 0.1rem rgba(0, 0, 0, 0.8), 0 0 0.1rem 0 rgba(0, 0, 0, 0.3); }
+  .table__container::after,
+  .table__container ::before {
+    content: '';
+    grid-row: 2/3;
+    left: 80%;
+    background: #fff; }
 
 .table__content {
   /* collapse all table borders into single border */
