--- a/sass/_table-sale.scss
+++ b/sass/_table-sale.scss
@@ -6,21 +6,22 @@
   }
 }
 .table {
-  &__container {
-    grid-row: 1 /2;
+  &__water-wave {
     display: grid;
-
+    background-color: #35b3e7;
+    box-shadow: inset 0 0 1rem 0 rgba(0, 0, 0, 0.6),
+      0 0 1rem 0 rgba(0, 0, 0, 0.3);
+  }
+  &__container {
+    grid-row: 1 / 2;
     /* align content vertically at start */
     align-content: center;
     justify-content: center;
-    background-color: #35b3e7;
-    box-shadow: inset 0 0 0.1rem rgba(0, 0, 0, 0.8),
-      0 0 0.1rem 0 rgba(0, 0, 0, 0.3);
+    display: grid;
     &::after,
     ::before {
       content: '';
-      grid-row: 2/3;
-      left: 80%;
+      width: 100%;
       background: #fff;
     }
   }
