--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -676,24 +676,21 @@ left position as 0. This is for 0 to 5% of the animation */
 .table-sale__container {
   grid-column: col-end 7 / full-end;
   display: grid;
-  grid-template-rows: 10rem 30rem calc(100vh - 40rem); }
-
-.table__title {
-  background-color: #0a19a1;
-  display: flex;
-  /* align title horizontally */
-  justify-content: center;
-  /* align title vertically */
-  align-items: center;
-  grid-row: 1 / 2; }
+  grid-template-rows: 40rem calc(100vh - 40rem); }
 
 .table__container {
-  grid-row: 2 /3;
-  display: grid;
+  grid-row: 1 / 2;
   /* align content vertically at start */
   align-content: center;
   justify-content: center;
-  background-color: #f9f7f6; }
+  background-color: #35b3e7;
+  box-shadow: inset #101d2c, #101d2c, #101d2c, #101d2c;
+  display: grid; }
+  .table__container::after,
+  .table__container ::before {
+    content: '';
+    width: 100%;
+    background: #fff; }
 
 .table__content {
   /* collapse all table borders into single border */
@@ -702,7 +699,7 @@ left position as 0. This is for 0 to 5% of the animation */
   /* table rows still have square borders - overflow hidden ensures border radius set on table will 
     display nicely */
   overflow: hidden;
-  box-shadow: 0 1rem 4rem #101d2c; }
+  box-shadow: 0 0.5rem 1.5rem #f9f7f6; }
 
 .table__header {
   background-color: #101d2c;
@@ -717,18 +714,18 @@ left position as 0. This is for 0 to 5% of the animation */
   .table__row--THG {
     background-color: white; }
     .table__row--THG:hover {
-      background-color: #0a19a1;
+      background: linear-gradient(#0c22e8, #0a19a1, #0c22e8);
       color: #f9f7f6; }
   .table__row--Lions {
     background-color: #f9f7f6; }
     .table__row--Lions:hover {
-      background-color: #b31900;
+      background: linear-gradient(#b31900, #801504, #b31900);
       color: #f9f7f6; }
   .table__row--EGFC {
     background-color: white;
     border-bottom: 1px solid #aaa; }
     .table__row--EGFC:hover {
-      background-color: black;
+      background: linear-gradient(#101d2c, black, #101d2c);
       color: #f6be00; }
 
 th,
@@ -736,7 +733,7 @@ td {
   padding: 1.2rem; }
 
 .shirt-sale__container {
-  grid-row: 3 /4;
+  grid-row: 2 /3;
   display: grid;
   /* align title horizontally */
   justify-content: center;
@@ -754,16 +751,13 @@ td {
 
 .sea-serpent__content {
   grid-row: 1 /2;
-  background-image: linear-gradient(rgba(12, 34, 232, 0.2), rgba(10, 25, 161, 0.5)), url(../img/sea-serpent.png);
+  background-image: linear-gradient(rgba(10, 25, 161, 0.5), rgba(12, 34, 232, 0.1)), url(../img/sea-serpent.png);
   background-repeat: no-repeat;
   /* first value = horizontal position. second = vertical. Top left corner = 0% 0%, 
     right corner = 100% 100% */
   background-position: 50% 60%;
   background-size: cover;
-  display: flex;
-  flex-flow: wrap;
-  align-items: center;
-  justify-content: center; }
+  filter: blur(0.05rem); }
   @media only screen and (max-width: 62.5em) {
     .sea-serpent__content {
       grid-column: full-start / full-end; } }
@@ -774,12 +768,66 @@ td {
   display: flex;
   align-items: center;
   justify-content: center; }
-  .sea-serpent__ripple--effect {
-    position: absolute;
-    z-index: 2;
-    transform: rotateX(80deg);
-    box-sizing: border-box;
-    border: 4px solid #fff;
-    border-radius: 50%;
-    animation: animate 5s linear infinite;
-    animation-delay: calc(-0.5s * var(--i)); }
+
+.sea-serpent__ripple span {
+  position: absolute;
+  transform: rotateX(80deg);
+  box-sizing: border-box;
+  /* border styles for the ripples */
+  border-bottom: 0.3rem solid #00577b;
+  border-left: 0.3rem solid #00577b;
+  border-right: 0.3rem solid #00577b;
+  border-radius: 50%;
+  translate: -8rem 10rem;
+  animation: ripple 5s linear infinite;
+  animation-delay: calc(-0.5s * var(--i)); }
+
+.sea-serpent__ripple:nth-child(2) span {
+  animation: ripple2 5s linear infinite;
+  translate: -8rem -40rem;
+  /* border styles for the ripples */
+  border-bottom: 0.5rem solid #043950;
+  border-left: 0.5rem solid #043950;
+  border-right: 0.5rem solid #043950;
+  animation-delay: calc(-0.5s * var(--i)); }
+
+.sea-serpent__ripple:nth-child(3) span {
+  animation: ripple3 5s linear infinite;
+  border-bottom: 0.3rem solid #0a19a1;
+  border-left: 0.3rem solid #0a19a1;
+  border-right: 0.3rem solid #0a19a1;
+  translate: -8rem -90rem;
+  animation-delay: calc(-0.5s * var(--i)); }
+
+@keyframes ripple {
+  0% {
+    width: 11rem;
+    height: 11rem; }
+  50% {
+    opacity: 1; }
+  100% {
+    width: 20rem;
+    height: 20rem;
+    opacity: 0; } }
+
+@keyframes ripple2 {
+  0% {
+    width: 11rem;
+    height: 11rem; }
+  50% {
+    opacity: 1; }
+  100% {
+    width: 30rem;
+    height: 30rem;
+    opacity: 0; } }
+
+@keyframes ripple3 {
+  0% {
+    width: 11rem;
+    height: 11rem; }
+  50% {
+    opacity: 1; }
+  100% {
+    width: 35rem;
+    height: 35rem;
+    opacity: 0; } }
