--- a/sass/_table-sale.scss
+++ b/sass/_table-sale.scss
@@ -8,22 +8,26 @@
 .table {
   &__water-wave {
     display: grid;
+    grid-template-rows: 50% 50%;
     background-color: #35b3e7;
+    /* box sahdow for the beginning of wave effect */
     box-shadow: inset 0 0 1rem 0 rgba(0, 0, 0, 0.6),
       0 0 1rem 0 rgba(0, 0, 0, 0.3);
-  }
-  &__container {
-    grid-row: 1 / 2;
-    /* align content vertically at start */
-    align-content: center;
-    justify-content: center;
-    display: grid;
+    position: relative;
+    overflow: hidden;
     &::after,
     ::before {
       content: '';
       width: 100%;
       background: #fff;
+      grid-row: 2 /3;
     }
+  }
+  &__container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
   &__content {
     /* collapse all table borders into single border */
@@ -32,6 +36,8 @@
     /* table rows still have square borders - overflow hidden ensures border radius set on table will 
     display nicely */
     overflow: hidden;
+    /* stop text dropping a line */
+    white-space: nowrap;
     box-shadow: 0 0.5rem 1.5rem $color-grey-1;
   }
   &__header {
@@ -43,6 +49,7 @@
 
   &__row {
     font-size: 1.5rem;
+    height: 5rem;
     &:hover {
       cursor: pointer;
     }
