--- a/css/style.css
+++ b/css/style.css
@@ -691,7 +691,11 @@ left position as 0. This is for 0 to 5% of the animation */
     content: '';
     width: 100%;
     background: #fff;
-    grid-row: 2 /3; }
+    grid-row: 1 /2;
+    align-content: start;
+    display: grid; }
+  .table__water-wave::before {
+    background: rgba(255, 255, 255, 0.3); }
 
 .table__container {
   position: absolute;
@@ -708,7 +712,7 @@ left position as 0. This is for 0 to 5% of the animation */
   overflow: hidden;
   /* stop text dropping a line */
   white-space: nowrap;
-  box-shadow: 0 0.5rem 1.5rem #f9f7f6; }
+  box-shadow: 0 0.5rem 1.5rem #101d2c; }
 
 .table__header {
   background-color: #101d2c;
@@ -740,7 +744,7 @@ left position as 0. This is for 0 to 5% of the animation */
 
 th,
 td {
-  padding: 1.2rem; }
+  padding: 1rem; }
 
 .shirt-sale__container {
   grid-row: 2 /3;
