--- a/sass/_table-sale.scss
+++ b/sass/_table-sale.scss
@@ -20,7 +20,14 @@
       content: '';
       width: 100%;
       background: #fff;
-      grid-row: 2 /3;
+      grid-row: 1 /2;
+      align-content: start;
+      display: grid;
+    }
+    &::after {
+    }
+    &::before {
+      background: rgba(255, 255, 255, 0.3);
     }
   }
   &__container {
@@ -38,7 +45,7 @@
     overflow: hidden;
     /* stop text dropping a line */
     white-space: nowrap;
-    box-shadow: 0 0.5rem 1.5rem $color-grey-1;
+    box-shadow: 0 0.5rem 1.5rem $color-secondary;
   }
   &__header {
     background-color: $color-secondary;
@@ -85,7 +92,7 @@
 
 th,
 td {
-  padding: 1.2rem;
+  padding: 1rem;
 }
 
 .shirt-sale {
