--- a/css/style.css
+++ b/css/style.css
@@ -678,30 +678,10 @@ left position as 0. This is for 0 to 5% of the animation */
   display: grid;
   grid-template-rows: 40rem calc(100vh - 40rem); }
 
-.table__water-wave {
-  display: grid;
-  grid-template-rows: 50% 50%;
-  background-color: #35b3e7;
-  /* box sahdow for the beginning of wave effect */
-  box-shadow: inset 0 0 1rem 0 rgba(0, 0, 0, 0.6), 0 0 1rem 0 rgba(0, 0, 0, 0.3);
-  position: relative;
-  overflow: hidden; }
-  .table__water-wave::after,
-  .table__water-wave ::before {
-    content: '';
-    width: 100%;
-    background: #fff;
-    grid-row: 1 /2;
-    align-content: start;
-    display: grid; }
-  .table__water-wave::before {
-    background: rgba(255, 255, 255, 0.3); }
-
 .table__container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
+  display: grid;
+  align-content: center;
+  justify-content: center; }
 
 .table__content {
   /* collapse all table borders into single border */
@@ -757,6 +737,16 @@ td {
   transition: all 0.5s;
   width: 20vw;
   cursor: pointer; }
+
+@keyframes water-wave {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+    top: -30%; }
+  50% {
+    top: -50%; }
+  100% {
+    transform: translate(-50%, -50%) rotate(0deg);
+    top: -30%; } }
 
 .sea-serpent__container {
   grid-column: col-end 4 / col-end 7;
