--- a/sass/_table-sale.scss
+++ b/sass/_table-sale.scss
@@ -6,35 +6,10 @@
   }
 }
 .table {
-  &__water-wave {
-    display: grid;
-    grid-template-rows: 50% 50%;
-    background-color: #35b3e7;
-    /* box sahdow for the beginning of wave effect */
-    box-shadow: inset 0 0 1rem 0 rgba(0, 0, 0, 0.6),
-      0 0 1rem 0 rgba(0, 0, 0, 0.3);
-    position: relative;
-    overflow: hidden;
-    &::after,
-    ::before {
-      content: '';
-      width: 100%;
-      background: #fff;
-      grid-row: 1 /2;
-      align-content: start;
-      display: grid;
-    }
-    &::after {
-    }
-    &::before {
-      background: rgba(255, 255, 255, 0.3);
-    }
-  }
   &__container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    display: grid;
+    align-content: center;
+    justify-content: center;
   }
   &__content {
     /* collapse all table borders into single border */
@@ -110,5 +85,19 @@ td {
     transition: all 0.5s;
     width: 20vw;
     cursor: pointer;
+  }
+}
+
+@keyframes water-wave {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+    top: -30%;
+  }
+  50% {
+    top: -50%;
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(0deg);
+    top: -30%;
   }
 }
