--- a/sass/_table-sale.scss
+++ b/sass/_table-sale.scss
@@ -7,6 +7,10 @@
 }
 .table {
   &__container {
+    background-image: linear-gradient(
+      rgba($color-grey-1, 0.1),
+      rgba($color-primary-dark, 0.95)
+    );
     display: grid;
     align-content: center;
     justify-content: center;
@@ -67,7 +71,7 @@
 
 th,
 td {
-  padding: 1rem;
+  padding: 1.2rem;
 }
 
 .shirt-sale {
@@ -77,7 +81,7 @@ td {
     /* align title horizontally */
     justify-content: center;
     background-image: linear-gradient(
-      rgba($color-primary-dark, 0.7),
+      rgba($color-primary-dark, 0.95),
       rgba($color-grey-1, 0.1)
     );
   }
