--- a/sass/_table-sale.scss
+++ b/sass/_table-sale.scss
@@ -8,7 +8,7 @@
 .table {
   &__container {
     background-image: linear-gradient(
-      rgba($color-grey-1, 0.1),
+      rgba($color-secondary, 0.9),
       rgba($color-primary-dark, 0.95)
     );
     display: grid;
