--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,11 @@ body {
 
 .features {
   /* features go from center-start to center-end - beginning to end of centre 8 grid */
-  grid-column: center-start / center-end;
-  margin: 5rem 0;
+  grid-column: full-start / col-end 6;
+  margin: 5rem;
   /* making features grid item a grid container */
   display: grid;
+  align-content: center;
   /* making columns for this 'sub grid'. */
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
   grid-gap: 6rem;
@@ -66,6 +67,56 @@ body {
     transform: translateY(-1rem); }
   .feature__text {
     font-size: 1.7rem; }
+
+.table__container {
+  grid-column: col-end 6 / full-end;
+  background-image: linear-gradient(rgba(249, 247, 246, 0.9), rgba(10, 25, 161, 0.95));
+  display: grid;
+  align-content: center;
+  justify-content: center; }
+
+.table__content {
+  /* collapse all table borders into single border */
+  border-collapse: collapse;
+  border-radius: 1rem 1rem 0 0;
+  /* table rows still have square borders - overflow hidden ensures border radius set on table will 
+    display nicely */
+  overflow: hidden;
+  /* stop text dropping a line */
+  white-space: nowrap;
+  box-shadow: 0 0.5rem 1.5rem #101d2c; }
+
+.table__header {
+  background-color: #101d2c;
+  color: #f9f7f6;
+  font-size: 1.6rem;
+  border-bottom: 0.1rem solid #aaa; }
+
+.table__row {
+  font-size: 1.6rem;
+  height: 5rem; }
+  .table__row:hover {
+    cursor: pointer; }
+  .table__row--THG {
+    background-color: white; }
+    .table__row--THG:hover {
+      background: linear-gradient(#0c22e8, #0a19a1, #0c22e8);
+      color: #f9f7f6; }
+  .table__row--Lions {
+    background-color: #f9f7f6; }
+    .table__row--Lions:hover {
+      background: linear-gradient(#b31900, #801504, #b31900);
+      color: #f9f7f6; }
+  .table__row--EGFC {
+    background-color: white;
+    border-bottom: 1px solid #aaa; }
+    .table__row--EGFC:hover {
+      background: linear-gradient(#101d2c, black, #101d2c);
+      color: #f6be00; }
+
+th,
+td {
+  padding: 1.5rem; }
 
 .footer {
   background-color: #0a19a1;
@@ -298,7 +349,7 @@ left position as 0. This is for 0 to 5% of the animation */
         justify-items: start; } }
   .players__img {
     /* width: 150px */
-    width: 15rem;
+    width: 8rem;
     border-radius: 50%;
     display: block;
     /* large being 62.5em - 1000px */ }
@@ -678,55 +729,6 @@ left position as 0. This is for 0 to 5% of the animation */
   display: grid;
   grid-template-rows: 40rem calc(100vh - 40rem); }
 
-.table__container {
-  background-image: linear-gradient(rgba(16, 29, 44, 0.9), rgba(10, 25, 161, 0.95));
-  display: grid;
-  align-content: center;
-  justify-content: center; }
-
-.table__content {
-  /* collapse all table borders into single border */
-  border-collapse: collapse;
-  border-radius: 1rem 1rem 0 0;
-  /* table rows still have square borders - overflow hidden ensures border radius set on table will 
-    display nicely */
-  overflow: hidden;
-  /* stop text dropping a line */
-  white-space: nowrap;
-  box-shadow: 0 0.5rem 1.5rem #101d2c; }
-
-.table__header {
-  background-color: #101d2c;
-  color: #f9f7f6;
-  font-size: 1.5rem;
-  border-bottom: 0.1rem solid #aaa; }
-
-.table__row {
-  font-size: 1.5rem;
-  height: 5rem; }
-  .table__row:hover {
-    cursor: pointer; }
-  .table__row--THG {
-    background-color: white; }
-    .table__row--THG:hover {
-      background: linear-gradient(#0c22e8, #0a19a1, #0c22e8);
-      color: #f9f7f6; }
-  .table__row--Lions {
-    background-color: #f9f7f6; }
-    .table__row--Lions:hover {
-      background: linear-gradient(#b31900, #801504, #b31900);
-      color: #f9f7f6; }
-  .table__row--EGFC {
-    background-color: white;
-    border-bottom: 1px solid #aaa; }
-    .table__row--EGFC:hover {
-      background: linear-gradient(#101d2c, black, #101d2c);
-      color: #f6be00; }
-
-th,
-td {
-  padding: 1.2rem; }
-
 .shirt-sale__container {
   grid-row: 2 /3;
   display: grid;
@@ -738,16 +740,6 @@ td {
   transition: all 0.5s;
   width: 20vw;
   cursor: pointer; }
-
-@keyframes water-wave {
-  0% {
-    transform: translate(-50%, -50%) rotate(0deg);
-    top: -30%; }
-  50% {
-    top: -50%; }
-  100% {
-    transform: translate(-50%, -50%) rotate(0deg);
-    top: -30%; } }
 
 .sea-serpent__container {
   grid-column: col-end 4 / col-end 7;
