--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,5 +7,5 @@
 @import 'navbar-second';
 @import 'story';
 @import 'typography';
-@import 'table-sale';
+@import 'history-sale';
 @import 'sea-serpent';
