--- a/sass/_players.scss
+++ b/sass/_players.scss
@@ -1,10 +1,82 @@
+.table {
+  &__container {
+    grid-column: col-end 4 / col-start 8;
+    background-image: linear-gradient(
+      rgba($color-grey-1, 0.9),
+      rgba($color-secondary, 0.95)
+    );
+    display: grid;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+  }
+  &__title {
+    padding-bottom: 2rem;
+  }
+  &__content {
+    /* collapse all table borders into single border */
+    border-collapse: collapse;
+    border-radius: 1rem 1rem 0 0;
+    /* table rows still have square borders - overflow hidden ensures border radius set on table will 
+    display nicely */
+    overflow: hidden;
+    /* stop text dropping a line */
+    white-space: nowrap;
+    box-shadow: 0 0.5rem 1.5rem $color-secondary;
+  }
+  &__header {
+    background-color: $color-secondary;
+    color: $color-grey-1;
+    font-size: 1.6rem;
+    border-bottom: 0.1rem solid $color-grey-2;
+  }
+
+  &__row {
+    font-size: 1.6rem;
+    height: 5rem;
+    &:hover {
+      cursor: pointer;
+    }
+
+    &--THG {
+      background-color: white;
+      &:hover {
+        background: linear-gradient(
+          $color-primary,
+          $color-primary-dark,
+          $color-primary
+        );
+        color: $color-grey-1;
+      }
+    }
+    &--Lions {
+      background-color: $color-grey-1;
+      &:hover {
+        background: linear-gradient(#b31900, #801504, #b31900);
+        color: $color-grey-1;
+      }
+    }
+    &--EGFC {
+      background-color: white;
+      border-bottom: 1px solid $color-grey-2;
+      &:hover {
+        background: linear-gradient($color-secondary, black, $color-secondary);
+        color: #f6be00;
+      }
+    }
+  }
+}
+
+th,
+td {
+  padding: 1.5rem;
+}
+
 .players {
   background-color: $color-primary-dark;
   display: grid;
-  grid-column: col-start 7 / full-end;
+  grid-column: col-start 8 / full-end;
   padding: 3rem;
-  // align the whole players grid in the overall players box centrally
-  // align-content = centered vertically
   align-content: center;
   // justify-content = centered horizontally
   justify-content: center;
@@ -28,7 +100,7 @@
     //need to define some spacing - columns and rows
     grid-column-gap: 2rem;
     // row 5% of viewport height - because margin spacing should change whenever change height of viewport
-    grid-row-gap: 5vh;
+    grid-row-gap: 3vh;
     // align the text in grid vertically
     align-items: center;
     // align the text in grid horizontally
