--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 @import 'features';
 @import 'footer';
 @import 'banner';
-@import 'players';
+@import 'team';
 @import 'navbar-first';
 @import 'navbar-second';
 @import 'story';
