--- a/sass/_team.scss
+++ b/sass/_team.scss
@@ -1,17 +1,17 @@
+.team {
+  grid-column: col-start 8 / full-end;
+  display: grid;
+}
+
 .table {
   &__container {
-    grid-column: col-end 4 / col-start 8;
-    background-image: linear-gradient(
-      rgba($color-grey-1, 0.9),
-      rgba($color-secondary, 0.95)
-    );
     display: grid;
     align-content: center;
     justify-content: center;
     text-align: center;
   }
   &__title {
-    padding-bottom: 2rem;
+    padding: 3rem 0;
   }
   &__content {
     /* collapse all table borders into single border */
@@ -25,18 +25,16 @@
     box-shadow: 0 0.5rem 1.5rem $color-secondary;
   }
   &__header {
-    background-color: $color-secondary;
-    color: $color-grey-1;
-    font-size: 1.6rem;
+    background-color: $color-grey-1;
+    color: $color-secondary;
+    font-size: 1.4rem;
     border-bottom: 0.1rem solid $color-grey-2;
   }
-
   &__row {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     &:hover {
       cursor: pointer;
     }
-
     &--THG {
       background-color: white;
       &:hover {
@@ -73,8 +71,8 @@ td {
 
 .players {
   background-color: $color-primary-dark;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='18' viewBox='0 0 100 18'%3E%3Cpath fill='%230c22e8' fill-opacity='0.4' d='M61.82 18c3.47-1.45 6.86-3.78 11.3-7.34C78 6.76 80.34 5.1 83.87 3.42 88.56 1.16 93.75 0 100 0v6.16C98.76 6.05 97.43 6 96 6c-9.59 0-14.23 2.23-23.13 9.34-1.28 1.03-2.39 1.9-3.4 2.66h-7.65zm-23.64 0H22.52c-1-.76-2.1-1.63-3.4-2.66C11.57 9.3 7.08 6.78 0 6.16V0c6.25 0 11.44 1.16 16.14 3.42 3.53 1.7 5.87 3.35 10.73 7.24 4.45 3.56 7.84 5.9 11.31 7.34zM61.82 0h7.66a39.57 39.57 0 0 1-7.34 4.58C57.44 6.84 52.25 8 46 8S34.56 6.84 29.86 4.58A39.57 39.57 0 0 1 22.52 0h15.66C41.65 1.44 45.21 2 50 2c4.8 0 8.35-.56 11.82-2z'%3E%3C/path%3E%3C/svg%3E");
   display: grid;
-  grid-column: col-start 8 / full-end;
   padding: 3rem;
   align-content: center;
   // justify-content = centered horizontally
@@ -136,14 +134,11 @@ td {
   }
 
   &__goals {
-    text-transform: uppercase;
-    font-size: 1.5rem;
-    color: $color-grey-1;
     // move the text up slightly so not too far away from players names
     margin-top: -3px;
     /* large being 62.5em - 1000px */
+    color: $color-grey-1;
     @media only screen and (max-width: $bp-large) {
-      font-size: 0.75rem;
       margin-top: 0px;
     }
   }
